changed agent/{id} to {npn} and fixes for deploying the agents/ resources
